fixed the width overflow issue.

--- a/src/Timebox.css
+++ b/src/Timebox.css
@@ -1,9 +1,13 @@
 /* Default Light Mode */
+body{
+  background: #000;
+  max-width: 100vw;
+  overflow-x: hidden; /* Prevent horizontal overflow */
+
+}
 .timebox-container {
-  width: 100%;
   margin: auto;
   padding: 20px;
-  border-radius: 10px;
   font-family: Arial, sans-serif;
   background-color: #1a1a1a;
   color: #00ff00;
@@ -98,7 +102,7 @@
 .schedule-grid {
   display: flex;
   flex-direction: column;
-  max-width: 90%;
+  max-width: 85%;
   border: 1px solid #00ff00;
   box-shadow: 0 0 10px #00ff00;
 }
